# kafka-rust-bootstrap

./: Cargo.toml  README.md  compose.yml
config/: generate_tls_certs.sh
config/ssl/: ca-cert  ca-cert.key  ca-cert.srl  client.crt  client.csr  client.key  kafka.client.keystore.jks  kafka.client.truststore.jks  kafka.crt  kafka.csr  kafka.keystore.jks  kafka.truststore.jks
src/: main.rs
