[package]
name = "kafka-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = [
    "rt-multi-thread",
    "macros",
    "test-util",
] }
rskafka = { version = "0.6.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rustls = "0.23.27"
rustls-pemfile = "2.0"
